# spotify-dl-cli

./: .gitattributes  .gitignore  Cargo.toml  README.md  RUST_FEASIBILITY.md  audio_formats.py  build.rs  call_trace.py  config.py  constants.py  downloader.py  generate.ps1  generate.sh  generate_proto.sh  http_client.py  main.py  metadata_helpers.py  ogg_parser.py  parse_args.py  patch_binary.py  playplay_client.py  pyproject.toml  requirements.txt  resolve_exe_path.py  seekStateToBlock0.txt  service_resolver.py  storage_resolve_helpers.py  test.bat  token_manager.py
.github/workflows/: ci.yml
clients/: metadata_client.py  storage_resolve_client.py
clt_extended_metadata/: extended_metadata_client.py  extendedmetadata_pb2.py
clt_playlist/: lens_model_pb2.py  playlist4_external.proto  playlist4_external_pb2.py  playlist4_external_pb2.pyi  playlist_client.py  playlist_permission_pb2.py  playlist_permission_pb2.pyi  signal_model_pb2.py  signal_model_pb2.pyi
clt_playplay/: playplay_client.py  playplay_pb2.py
clt_storage_resolve/: storage_resolve_client.py  storage_resolve_pb2.py
ogg/: merge_bins.py  merge_bins2.py  reconstruct.py
playplay_emulator/: __init__.py  constants.py  ctx.py  emulator.py  key_derivation_vm.py  keygen.py  patch_binary.py  playplay_ctx.py  playplay_keygen.py  trace.py  unicorn_utils.py
proto/: playplay_pb2.py  storage_resolve_pb2.py  track_pb2.py
sp_auth/: constants.py  pkce.py
sp_downloader/: apply_metadata.py  constants.py  downloader.py  helpers.py
spotify_dl_cli/: __init__.py  audio_formats.py  collect_track_uris.py  config.py  main.py  ogg_parser.py  parse_args.py  resolve_exe_path.py  service_resolver.py  spotify_uri_helpers.py  token_manager.py
spotify_dl_cli/clt_extended_metadata/: audio_files_extension.proto  audio_files_extension_pb2.py  audio_files_extension_pb2.pyi  extended_metadata_client.py  extendedmetadata.proto  extendedmetadata_pb2.py  helpers.py
spotify_dl_cli/clt_playlist/: lens-model.proto  lens_model_pb2.py  lens_model_pb2.pyi  playlist4_external.proto  playlist4_external_pb2.py  playlist4_external_pb2.pyi  playlist_client.py  playlist_permission.proto  playlist_permission_pb2.py  signal-model.proto  signal_model_pb2.py
spotify_dl_cli/clt_playplay/: playplay.proto  playplay_client.py  playplay_pb2.py
spotify_dl_cli/clt_storage_resolve/: storage-resolve.proto  storage_resolve_client.py  storage_resolve_pb2.py  storage_resolve_pb2.pyi
spotify_dl_cli/http_client/: constants.py  consts.py  http_client.py
spotify_dl_cli/playplay_emulator/: constants.py  ctx.py  emu_with_trace.py  emulator.py  helpers.py  key_derivation_vm.py  keygen.py  patch_binary.py  unicorn_utils.py
spotify_dl_cli/playplay_emulator5/: consts.py  emu_session.py  key_emu.py  keygen.py  trace_hook.py
spotify_dl_cli/sp_auth/: auth_request_pkce.py  authorization_code_payload.py  constants.py  pkce.py  (+3 more)
src/: constants.rs  downloader.rs  http_client.rs  main.rs  ogg_parser.rs  playplay_keygen.rs  proto.rs
(+29 files in other folders)
