[package]
name = "playplay_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
bytes = "1"
prost = "0.12"
prost-types = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3.0"
[features]
default = []
