[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-dl-cli"
version = "0.1.1"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
spotify-dl-cli = "spotify_dl_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spotify_dl_cli", "spotify_dl_cli.*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 120
target-version = "py311"

exclude = [
    "spotify_dl_cli/clt_*/**/*_pb2.py",
    "spotify_dl_cli/clt_*/**/*_pb2.pyi",
    "**/generated/**"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
